SK : handling the case if after user loges in he deletes the account from the device settings and tries to choose account in the app from the drop down list

--- a/SKTwitterClient/SKTwitterClient/ar.lproj/Localizable.strings
+++ b/SKTwitterClient/SKTwitterClient/ar.lproj/Localizable.strings
@@ -19,3 +19,4 @@
 "Loading..."="جار التحميل...";
 "Pull to refresh..."="اسحب للتحديث...";
 "Release to refresh..."="اترك للتحديث ...";
+"No twitter accounts saved on the device please save one in the device settings first"="لا حسابات تويتر حفظها على الجهاز يرجى حفظ واحد في إعدادات الجهاز أولا";
