--- a/SKTwitterClient/SKTwitterClient/en.lproj/Localizable.strings
+++ b/SKTwitterClient/SKTwitterClient/en.lproj/Localizable.strings
@@ -19,3 +19,5 @@
 "Loading..."="Loading...";
 "Pull to refresh..."="Pull to refresh...";
 "Release to refresh..."="Release to refresh...";
+"No twitter accounts saved on the device please save one in the device settings first"="No twitter accounts saved on the device please save one in the device settings first";
+
